some changes in package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "mera",
   "version": "1.0.0",
   "description": "another my learning practise project ",
+
+  "type": "module",
+
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon/src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,8 +15,5 @@
     "chai"
   ],
   "author": "Ashish Nagvanshi",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  }
+  "license": "ISC"
 }
