--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon/src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
